crates/valen-parser/tests/snapshots/parser__sealed_class_no_body.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"sealed class Payment;\")"
---
=== AST ===
[
    Class(
        ClassDecl {
            visibility: Internal,
            kind: Sealed,
            name: "Payment",
            generics: [],
            ctor_params: [],
            supertypes: [],
            body: [],
            span: Span {
                start: 0,
                end: 21,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
