crates/valen-parser/tests/snapshots/parser__sealed_trait.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"sealed trait Expr { fn eval(self) -> Int; }\")"
---
=== AST ===
[
    Trait(
        TraitDecl {
            annotations: [],
            visibility: Internal,
            is_sealed: true,
            name: "Expr",
            generics: [],
            items: [
                Fn(
                    FnDecl {
                        annotations: [],
                        visibility: Pub,
                        name: "eval",
                        generics: [],
                        params: [
                            Param {
                                name: "self",
                                ty: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: "Self",
                                                generics: [],
                                                span: Span {
                                                    start: 28,
                                                    end: 32,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 28,
                                            end: 32,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                mutable: false,
                                default: None,
                                span: Span {
                                    start: 28,
                                    end: 32,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        return_type: Some(
                            Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: "Int",
                                            generics: [],
                                            span: Span {
                                                start: 37,
                                                end: 40,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 37,
                                        end: 40,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ),
                        ),
                        body: None,
                        is_open: false,
                        is_override: false,
                        is_abstract: true,
                        span: Span {
                            start: 20,
                            end: 41,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 43,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
