crates/valen-parser/tests/snapshots/parser__sealed_trait_marker.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"sealed trait Marker {}\")"
---
=== AST ===
[
    Trait(
        TraitDecl {
            visibility: Internal,
            is_sealed: true,
            name: "Marker",
            generics: [],
            items: [],
            span: Span {
                start: 0,
                end: 22,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
